--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 <div class="card">
     <div class="search">
-        <input type="text" placeholder="Enter city name" spellcheck="false">
+        <input type="text" placeholder="Enter city name" spellcheck="ture">
         <button><img src="images/search.png"></button>
     </div>
 </div>
