--- a/index.html
+++ b/index.html
@@ -9,11 +9,40 @@
 <body>
     
 <div class="card">
+    <!-- search Bar -->
     <div class="search">
         <input type="text" placeholder="Enter city name" spellcheck="false">
         <button><img src="images/search.png"></button>
     </div>
+
+    <!-- Weather Information -->
+    <div class="weather">
+        <img src="images/drizzle.png" class="weather-icon">
+        <h1 class="temp">22°C</h1>
+        <h2 class="city">Santo Domingo</h2>
+
+        <!-- Weather Description -->
+        <div class="details">
+            <div class="col">
+                <img src="images/humidity.png" alt="">
+                <div>
+                    <p class="humidity">50%</p>
+                    <p>Humidity</p>
+                </div>
+            </div>
+
+            <div class="col">
+                <img src="images/wind.png" alt="">
+                <div>
+                    <p class="wind">15 km/h</p>
+                    <p>Wind Speed</p>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
 </div>
 
 </body>
-</html>
+</html>  
