Waether api script

--- a/index.html
+++ b/index.html
@@ -44,5 +44,22 @@
     </div>
 </div>
 
+<script>
+
+    const apiKey = "ebbf3e3171e8c1e0bf1a5fe7abe76e04";
+    const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=paris";
+
+    async function checkWeather(){
+        const weatherResponse = await fetch(apiUrl + `&appid=${apiKey}`);
+        var data = await weatherResponse.json();
+
+        console.log(data);
+    }
+
+    checkWeather();
+
+</script>
+
+
 </body>
 </html>  
