--- a/index.html
+++ b/index.html
@@ -47,13 +47,25 @@
 <script>
 
     const apiKey = "ebbf3e3171e8c1e0bf1a5fe7abe76e04";
-    const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=paris";
+    const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
 
-    async function checkWeather(){
-        const weatherResponse = await fetch(apiUrl + `&appid=${apiKey}`);
+    const searchBox = document.querySelector(".search input");
+    const searchBtn = document.querySelector(".search button");
+
+    async function checkWeather(city){
+        const weatherResponse = await fetch(apiUrl + city + `&appid=${apiKey}`);
         var data = await weatherResponse.json();
 
         console.log(data);
+
+        document.querySelector(".city").innerHTML = data.name;
+        document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°C";
+        document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+        document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
+
+
+
+
     }
 
     checkWeather();
