--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <button><img src="images/search.png"></button>
     </div>
 
+    <div class="error">
+        <p>Invalid City Name</p>
+    </div>
+
     <!-- Weather Information -->
     <div class="weather">
         <img src="images/drizzle.png" class="weather-icon">
@@ -51,24 +55,45 @@
 
     const searchBox = document.querySelector(".search input");
     const searchBtn = document.querySelector(".search button");
+    const weatherIcon = document.querySelector(".weather-icon");
 
     async function checkWeather(city){
         const weatherResponse = await fetch(apiUrl + city + `&appid=${apiKey}`);
         var data = await weatherResponse.json();
-
-        console.log(data);
 
         document.querySelector(".city").innerHTML = data.name;
         document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°C";
         document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
         document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
 
+        if(data.weather[0].main == "Clouds"){
+            weatherIcon.src = "images/clouds.png";
+        }
+        else if(data.weather[0].main == "Clear"){
+            weatherIcon.src = "images/clear.png";
+        }
+        else if(data.weather[0].main == "Rain"){
+            weatherIcon.src = "images/rain.png";
+        }
+        else if(data.weather[0].main == "Drizzle"){
+            weatherIcon.src = "images/drizzle.png";
+        }
+        else if(data.weather[0].main == "Mist"){
+            weatherIcon.src = "images/mist.png";
+        }
+        else if(data.weather[0].main == "Snow"){
+            weatherIcon.src = "images/snow.png";
+        }
 
-
+        document.querySelector(".weather").style.display = "block";
+        
 
     }
 
-    checkWeather();
+    searchBtn.addEventListener("click", () => {
+        checkWeather(searchBox.value);
+    });
+
 
 </script>
 
