--- a/index.html
+++ b/index.html
@@ -1,102 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App - Mini Project</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
-<div class="card">
-    <!-- search Bar -->
-    <div class="search">
-        <input type="text" placeholder="Enter city name" spellcheck="false">
-        <button><img src="images/search.png"></button>
-    </div>
 
-    <div class="error">
-        <p>Invalid City Name</p>
-    </div>
+    <div class="card">
+        <!-- search Bar -->
+        <div class="search">
+            <input type="text" placeholder="Enter city name" spellcheck="false">
+            <button><img src="images/search.png"></button>
+        </div>
 
-    <!-- Weather Information -->
-    <div class="weather">
-        <img src="images/drizzle.png" class="weather-icon">
-        <h1 class="temp">22°C</h1>
-        <h2 class="city">Santo Domingo</h2>
+        <div class="error">
+            <p>Invalid City Name</p>
+        </div>
 
-        <!-- Weather Description -->
-        <div class="details">
-            <div class="col">
-                <img src="images/humidity.png" alt="">
-                <div>
-                    <p class="humidity">50%</p>
-                    <p>Humidity</p>
+        <!-- Weather Information -->
+        <div class="weather">
+            <img src="images/drizzle.png" class="weather-icon">
+            <h1 class="temp">22°C</h1>
+            <h2 class="city">Santo Domingo</h2>
+
+            <!-- Weather Description -->
+            <div class="details">
+                <div class="col">
+                    <img src="images/humidity.png" alt="">
+                    <div>
+                        <p class="humidity">50%</p>
+                        <p>Humidity</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col">
-                <img src="images/wind.png" alt="">
-                <div>
-                    <p class="wind">15 km/h</p>
-                    <p>Wind Speed</p>
+                <div class="col">
+                    <img src="images/wind.png" alt="">
+                    <div>
+                        <p class="wind">15 km/h</p>
+                        <p>Wind Speed</p>
+                    </div>
                 </div>
+
+
             </div>
-
-
         </div>
     </div>
-</div>
 
-<script>
+    <script>
 
-    const apiKey = "ebbf3e3171e8c1e0bf1a5fe7abe76e04";
-    const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
+        const apiKey = "ebbf3e3171e8c1e0bf1a5fe7abe76e04";
+        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
 
-    const searchBox = document.querySelector(".search input");
-    const searchBtn = document.querySelector(".search button");
-    const weatherIcon = document.querySelector(".weather-icon");
+        const searchBox = document.querySelector(".search input");
+        const searchBtn = document.querySelector(".search button");
+        const weatherIcon = document.querySelector(".weather-icon");
 
-    async function checkWeather(city){
-        const weatherResponse = await fetch(apiUrl + city + `&appid=${apiKey}`);
-        var data = await weatherResponse.json();
+        async function checkWeather(city) {
+            const weatherResponse = await fetch(apiUrl + city + `&appid=${apiKey}`);
 
-        document.querySelector(".city").innerHTML = data.name;
-        document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°C";
-        document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
-        document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
+            if (weatherResponse.status == 404) {
+                document.querySelector(".error").style.display = "block";
+                document.querySelector(".weather").style.display = "none";
+            }
+            else {
 
-        if(data.weather[0].main == "Clouds"){
-            weatherIcon.src = "images/clouds.png";
+                var data = await weatherResponse.json();
+
+                document.querySelector(".city").innerHTML = data.name;
+                document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°C";
+                document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+                document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
+
+                if (data.weather[0].main == "Clouds") {
+                    weatherIcon.src = "images/clouds.png";
+                }
+                else if (data.weather[0].main == "Clear") {
+                    weatherIcon.src = "images/clear.png";
+                }
+                else if (data.weather[0].main == "Rain") {
+                    weatherIcon.src = "images/rain.png";
+                }
+                else if (data.weather[0].main == "Drizzle") {
+                    weatherIcon.src = "images/drizzle.png";
+                }
+                else if (data.weather[0].main == "Mist") {
+                    weatherIcon.src = "images/mist.png";
+                }
+                else if (data.weather[0].main == "Snow") {
+                    weatherIcon.src = "images/snow.png";
+                }
+
+                document.querySelector(".weather").style.display = "block";
+                document.querySelector(".error").style.display = "none";
+            }
+
         }
-        else if(data.weather[0].main == "Clear"){
-            weatherIcon.src = "images/clear.png";
-        }
-        else if(data.weather[0].main == "Rain"){
-            weatherIcon.src = "images/rain.png";
-        }
-        else if(data.weather[0].main == "Drizzle"){
-            weatherIcon.src = "images/drizzle.png";
-        }
-        else if(data.weather[0].main == "Mist"){
-            weatherIcon.src = "images/mist.png";
-        }
-        else if(data.weather[0].main == "Snow"){
-            weatherIcon.src = "images/snow.png";
-        }
 
-        document.querySelector(".weather").style.display = "block";
-        
-
-    }
-
-    searchBtn.addEventListener("click", () => {
-        checkWeather(searchBox.value);
-    });
+        searchBtn.addEventListener("click", () => {
+            checkWeather(searchBox.value);
+        });
 
 
-</script>
+    </script>
 
 
 </body>
-</html>  
+
+</html>
