--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <div class="card">
+    <div class="card" id="weatherCard">
         <!-- search Bar -->
         <div class="search">
             <input type="text" placeholder="Enter city name" spellcheck="false">
@@ -50,62 +50,7 @@
         </div>
     </div>
 
-    <script>
-
-        const apiKey = "ebbf3e3171e8c1e0bf1a5fe7abe76e04";
-        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
-
-        const searchBox = document.querySelector(".search input");
-        const searchBtn = document.querySelector(".search button");
-        const weatherIcon = document.querySelector(".weather-icon");
-
-        async function checkWeather(city) {
-            const weatherResponse = await fetch(apiUrl + city + `&appid=${apiKey}`);
-
-            if (weatherResponse.status == 404) {
-                document.querySelector(".error").style.display = "block";
-                document.querySelector(".weather").style.display = "none";
-            }
-            else {
-
-                var data = await weatherResponse.json();
-
-                document.querySelector(".city").innerHTML = data.name;
-                document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°C";
-                document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
-                document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
-
-                if (data.weather[0].main == "Clouds") {
-                    weatherIcon.src = "images/clouds.png";
-                }
-                else if (data.weather[0].main == "Clear") {
-                    weatherIcon.src = "images/clear.png";
-                }
-                else if (data.weather[0].main == "Rain") {
-                    weatherIcon.src = "images/rain.png";
-                }
-                else if (data.weather[0].main == "Drizzle") {
-                    weatherIcon.src = "images/drizzle.png";
-                }
-                else if (data.weather[0].main == "Mist") {
-                    weatherIcon.src = "images/mist.png";
-                }
-                else if (data.weather[0].main == "Snow") {
-                    weatherIcon.src = "images/snow.png";
-                }
-
-                document.querySelector(".weather").style.display = "block";
-                document.querySelector(".error").style.display = "none";
-            }
-
-        }
-
-        searchBtn.addEventListener("click", () => {
-            checkWeather(searchBox.value);
-        });
-
-
-    </script>
+    <script src="app.js"></script>
 
 
 </body>
